--- a/assets/after1.html
+++ b/assets/after1.html
@@ -17,6 +17,7 @@
 <div class="container-fluid">
     <div id="header">
         <h3>Stay calm and update</h3>
+        <p> Test to practice </p>
     </div>
     <div class="image1">
         <img src="images/image.png">
